# gedit-plugins

./: .gitlab-ci.yml  MAINTAINERS  Makefile.am  NEWS  README  README.md  configure.ac  gedit-plugins.doap  meson.build  meson_options.txt
help/: Makefile.am  meson.build
help/C/: character-map.page  commander.page  draw-spaces.page  git.page  session-saver.page  synctex.page  terminal.page  translate.page
help/ca/: ca.po
help/cs/: cs.po
help/es/: es.po
help/hu/: hu.po
help/lv/: lv.po
help/pl/: pl.po
help/sv/: sv.po
help/uk/: uk.po
plugins/: Makefile.am  meson.build
plugins/bookmarks/: gedit-bookmarks-app-activatable.c  gedit-bookmarks-plugin.c  gedit-bookmarks.metainfo.xml.in  meson.build
plugins/bookmarks/messages/: gedit-bookmarks-message-toggle.c
plugins/bracketcompletion/: gedit-bracketcompletion.metainfo.xml.in
plugins/charmap/: charmap.plugin.desktop.in.in  gedit-charmap.metainfo.xml.in
plugins/charmap/charmap/: __init__.py
plugins/codecomment/: codecomment.py  gedit-codecomment.metainfo.xml.in
plugins/colorpicker/: gedit-colorpicker.metainfo.xml.in
plugins/colorschemer/: gedit-colorschemer.metainfo.xml.in
plugins/colorschemer/schemer/: __init__.py  languages.py  schemer.py
plugins/commander/: gedit-commander.metainfo.xml.in
plugins/dashboard/: dashboard.plugin.desktop.in.in  gedit-dashboard.metainfo.xml.in
plugins/drawspaces/: drawspaces.plugin.desktop.in.in  gedit-drawspaces-app-activatable.c  gedit-drawspaces-app-activatable.h  gedit-drawspaces-view-activatable.c  gedit-drawspaces-view-activatable.h  gedit-drawspaces-window-activatable.c  gedit-drawspaces.metainfo.xml.in  meson.build
plugins/findinfiles/: Makefile.am  gedit-findinfiles.metainfo.xml.in  job.vala  meson.build  result-panel.vala
plugins/git/: gedit-git.metainfo.xml.in
plugins/joinlines/: gedit-joinlines.metainfo.xml.in
plugins/multiedit/: gedit-multiedit.metainfo.xml.in
plugins/multiedit/multiedit/: viewactivatable.py
plugins/sessionsaver/sessionsaver/: __init__.py  appactivable.py  dialogs.py  windowactivable.py
plugins/sessionsaver/sessionsaver/store/: xmlsessionstore.py
plugins/smartspaces/: gedit-smartspaces.metainfo.xml.in  meson.build  smartspaces.plugin.desktop.in.in
plugins/synctex/: gedit-synctex.metainfo.xml.in
plugins/synctex/synctex/: evince_dbus.py  synctex.py
plugins/terminal/: gedit-terminal.metainfo.xml.in  terminal.plugin.desktop.in.in  terminal.py
plugins/textsize/: gedit-textsize.metainfo.xml.in
plugins/translate/: gedit-translate.metainfo.xml.in  org.gnome.gedit.plugins.translate.gschema.xml
plugins/translate/tests/: testapertium.py
plugins/translate/translate/: __init__.py
plugins/translate/translate/services/: apertium.py  yandex.py
plugins/wordcompletion/: gedit-word-completion-plugin.c  gedit-wordcompletion.metainfo.xml.in  meson.build
plugins/zeitgeist/: gedit-zeitgeist-plugin.c  gedit-zeitgeist.metainfo.xml.in  meson.build  zeitgeist.plugin.desktop.in
po/: Makevars  POTFILES.in  ca.po  cs.po  da.po  de.po  es.po  eu.po  fr.po  fur.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  nl.po  pl.po  pt_BR.po  ro.po  sk.po  sv.po  tr.po  uk.po
